# UGV_HighSpeed

./: LICENSE  README.md
home_shfiles/: go_to_point.sh  start_vesc.sh  test_goFB.sh  test_goSteer.sh
src/cubic_spline/: CMakeLists.txt  package.xml
src/cubic_spline/include/: spline_rw.h
src/cubic_spline/launch/: spline_rviz.launch  spline_rviz_circle.launch  spline_rviz_cpp.launch
src/cubic_spline/scripts/: spline_fit_rviz.py
src/cubic_spline/src/: spline_circle.cpp  spline_circle_lib.cpp  spline_fit_rviz.cpp  spline_fit_rviz_lib.cpp
src/f1tenth_simulator/: params.yaml
src/vesc_system/vesc/vesc_ackermann/: CMakeLists.txt
src/vesc_system/vesc/vesc_ackermann/config/: vesc.yaml
src/vesc_system/vesc/vesc_ackermann/include/vesc_ackermann/: ackermann_to_vesc.h
src/vesc_system/vesc/vesc_ackermann/launch/: ackermann_to_vesc_node.launch  vesc_to_odom_node.launch
src/vesc_system/vesc/vesc_ackermann/src/: ackermann_to_vesc.cpp  go_to_goal.cpp  test_AckmannDrive.cpp  test_calidParams.cpp  test_cmd_steer.cpp
src/vesc_system/vesc/vesc_driver/include/vesc_driver/: vesc_packet.h  vesc_packet_factory.h
src/vesc_system/vesc/vesc_driver/src/: vesc_packet.cpp  vesc_packet_factory.cpp
